<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 상단바 -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/total_background"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="1dp" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/main_color"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:elevation="1dp" >

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_title_text"
                android:layout_gravity="center"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- 상단바 아래에 들어가는 화면 -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".MenuActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_user_info"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="?android:attr/textAppearanceSearchResultTitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_email"
                    android:layout_marginHorizontal="20dp"
                    android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="20dp" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textlayoutEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        app:hintEnabled="false" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="20"
                            android:hint="@string/hint_email" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnCheckID"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:includeFontPadding="false"
                        android:text="@string/check_redundancy" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_nick"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="20dp" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textlayoutNick"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        app:hintEnabled="false" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editNick"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="7"
                            android:hint="@string/nick_require" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnCheckNick"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:includeFontPadding="false"
                        android:text="@string/check_redundancy" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_pwd"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textlayoutPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:hintEnabled="false" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:hint="@string/pwd_require" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_pwd_check"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textlayoutPwdCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginHorizontal="20dp"
                    app:hintEnabled="false" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPwdCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:hint="@string/hint_pwd_check" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/condition_agreement"
                    android:textAppearance="?android:attr/textAppearanceSearchResultTitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="20dp" >

                    <CheckBox
                        android:id="@+id/checkTermCondition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/agree_TC" />

                    <Button
                        android:id="@+id/btnReadTermCondition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:includeFontPadding="false"
                        android:text="@string/read_all" />
                </LinearLayout>

                <ScrollView
                    android:id="@+id/scrollTermCondition"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/sub_color"
                    tools:ignore="NestedScrolling">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textFullTC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/agree_TC" />
                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="20dp">

                    <CheckBox
                        android:id="@+id/checkPersonalInfoCollection"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/agree_PI" />

                    <Button
                        android:id="@+id/btnReadPersonalInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:includeFontPadding="false"
                        android:text="@string/read_all" />
                </LinearLayout>

                <ScrollView
                    android:id="@+id/scrollPersonalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/sub_color"
                    tools:ignore="NestedScrolling">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textFullPI"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/agree_PI" />
                    </LinearLayout>
                </ScrollView>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@color/main_color"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/sign_up"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.drawerlayout.widget.DrawerLayout>